<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.fragments.login.forgotPassword.ForgotPasswordFragment"
    android:paddingHorizontal="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_password_title"
        android:textColor="@color/grey_3A"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_enter_your_email_address"
        android:textColor="@color/grey_A7"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_email_address"
        android:textColor="@color/grey_A7"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/primary_edit_text_background"
        android:elevation="0dp"
        android:hint="@string/text_mail_com"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/grey_3A"
        android:textColorHint="@color/grey_hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send_otp"
        style="@style/primary_button"
        android:text="@string/text_send_otp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dont_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/text_remember_password_back_to_sign_in"
        android:textColor="@color/grey_A7"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>