<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="20dp"
    tools:context=".ui.fragments.login.signUp.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_create_an_account"
            android:textColor="@color/grey_3A"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_complete_the_sign_up_process_to_get_started"
            android:textColor="@color/grey_A7"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_full_name"
            android:textColor="@color/grey_A7"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/primary_edit_text_background"
            android:elevation="0dp"
            android:hint="@string/text_abecd_fsgh"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/grey_3A"
            android:textColorHint="@color/grey_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_phone_number"
            android:textColor="@color/grey_A7"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_full_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/primary_edit_text_background"
            android:elevation="0dp"
            android:hint="@string/text_000000000000"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/grey_3A"
            android:textColorHint="@color/grey_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_email_address"
            android:textColor="@color/grey_A7"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/primary_edit_text_background"
            android:elevation="0dp"
            android:hint="@string/text_mail_com"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/grey_3A"
            android:textColorHint="@color/grey_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_password"
            android:textColor="@color/grey_A7"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/primary_edit_text_background"
            android:elevation="0dp"
            android:hint="@string/text_password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/grey_3A"
            android:textColorHint="@color/grey_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_view_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_password_visibility"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_remember"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/primary_checkbox"
            android:button="@color/transparent"
            android:checked="false"
            android:gravity="center"
            android:textColor="@color/grey_A7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_terms_of_policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="-2dp"
            android:gravity="center"
            android:text="@string/text_by_ticking_this_box_you_agree_to_our_terms_and_conditions_and_private_policy"
            android:textColor="@color/grey_A7"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cb_remember" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="@style/primary_button"
        android:layout_marginTop="50dp"
        android:text="@string/text_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/tv_already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="6dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_already_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_already_have_an_account_sign_in"
        android:textColor="@color/grey_A7"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView7"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_or_sign_in_using"
        android:textColor="@color/grey_A7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_google" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="8dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_log_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView7"
        app:layout_constraintStart_toStartOf="@+id/materialTextView7" />


</androidx.constraintlayout.widget.ConstraintLayout>