<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="20dp"
    tools:context=".ui.fragments.login.signIn.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome Back"
            android:textColor="@color/grey_3A"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Fill in your email and password to continue"
            android:textColor="@color/grey_A7"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_email_address"
            android:textColor="@color/grey_A7"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/primary_edit_text_background"
            android:elevation="0dp"
            android:hint="@string/text_mail_com"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/grey_3A"
            android:textColorHint="@color/grey_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_password"
            android:textColor="@color/grey_A7"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/primary_edit_text_background"
            android:elevation="0dp"
            android:hint="@string/text_password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textColor="@color/grey_3A"
            android:textColorHint="@color/grey_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_view_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@color/transparent"
            android:padding="8dp"
            android:src="@drawable/ic_password_visibility"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_remember"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/grey_checkbox"
            android:button="@color/transparent"
            android:checked="false"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/grey_A7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_remember_password"
            android:textColor="@color/grey_A7"
            android:textSize="12sp"
            android:layout_marginStart="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/cb_remember"
            app:layout_constraintStart_toEndOf="@id/cb_remember"
            app:layout_constraintTop_toTopOf="@+id/cb_remember" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialTextView8" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        style="@style/primary_button"
        android:layout_marginTop="50dp"
        android:text="@string/text_log_in"
        app:layout_constraintBottom_toTopOf="@+id/tv_dont_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="6dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dont_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/text_don_t_have_an_account_sign_up"
        android:textColor="@color/grey_A7"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView7"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_or_log_in_using"
        android:textColor="@color/grey_A7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_google" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:padding="8dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_log_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView7"
        app:layout_constraintStart_toStartOf="@+id/materialTextView7" />

</androidx.constraintlayout.widget.ConstraintLayout>