<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.login.onboarding.OnboardingFragment"
    android:padding="20dp">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tl_onboarding"
        app:layout_constraintTop_toBottomOf="@id/tl_onboarding"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:tabBackground="@drawable/onboarding_tab_layout_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:tabSelectedTextColor="@color/transparent"
        app:tabTextColor="@color/transparent"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_skip"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/secondary_button"
        android:text="@string/text_skip"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/primary_button"
        android:text="@string/text_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="@style/primary_button"
        android:layout_marginBottom="50dp"
        android:text="@string/text_sign_up"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_already_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_A7"
        android:textSize="14sp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:text="@string/text_already_have_an_account_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>